# umbra

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/common/: Cargo.toml
crates/common/src/: com.rs  error.rs  hex.rs  lib.rs  validation.rs
crates/dbgeng/: Cargo.toml
crates/dbgeng/src/: client.rs  com.rs  control.rs  data.rs  lib.rs  registers.rs  symbols.rs  system.rs
crates/debugger/: Cargo.toml
crates/debugger/examples/: bp_repro.rs  interrupt_repro.rs  kernel_smoke.rs  step_repro.rs  wait_repro.rs
crates/debugger/src/: lib.rs  session.rs
crates/disassembler/: Cargo.toml
crates/disassembler/src/: lib.rs
crates/etw/: Cargo.toml
crates/etw/src/: lib.rs
crates/extensions/: Cargo.toml
crates/extensions/src/: lib.rs
crates/models/: Cargo.toml
crates/models/src/: lib.rs
crates/symbols/: Cargo.toml
crates/symbols/src/: lib.rs
crates/ttd/: Cargo.toml
crates/ttd/src/: csts.rs  ffi.rs  lib.rs
crates/umbra/: Cargo.toml
crates/umbra/src/: lib.rs  main.rs  server.rs  session.rs  ttd_manager.rs
