[workspace]
members = [
    "crates/common",
    "crates/models",
    "crates/dbgeng",
    "crates/debugger",
    "crates/disassembler",
    "crates/extensions",
    "crates/etw",
    "crates/symbols",
    "crates/ttd",
    "crates/umbra",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
windows = { version = "0.52", features = [
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_Debug_Extensions",
    "Win32_System_Diagnostics_Etw",
    "Win32_System_Threading",
    "Win32_System_Kernel",
    "Win32_Security",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "implement",
] }
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main" }
schemars = "1.2"
pdb = "0.8"
