[package]
name = "umbra"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
models = { path = "../models" }
rmcp = { workspace = true, features = ["transport-io"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { version = "1.6", features = ["v4"] }
anyhow = "1.0"
debugger = { path = "../debugger" }
dbgeng = { path = "../dbgeng" }
etw = { path = "../etw" }
ttd = { path = "../ttd" }
symbols = { path = "../symbols" }
